--- a/Lab8_AlessandroReyes/nbproject/project.properties
+++ b/Lab8_AlessandroReyes/nbproject/project.properties
@@ -64,7 +64,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=lab8_alessandroreyes.Lab8_AlessandroReyes
+main.class=lab8_alessandroreyes.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
